Поправил код, улучшил его читаемость, изменил названия некоторых классов и переменных, поправил работу некоторых методов